--- a/src/data/_proposals.yaml
+++ b/src/data/_proposals.yaml
@@ -9,6 +9,58 @@
 #   帝都
 #########################################
 -
+  name: 曲池峰
+  name_en: chifeng
+  city_beijing: 1
+  city: 北京
+  city_en: Beijing
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro: QPython项目创始人,曾任职于Zynga,新浪网等互联网公司
+  intro_en: ...
+-
+  name: 杨林
+  city_beijing: 1
+  city: 北京
+  city_en: Beijing
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro: 杨林, 百度云系统工程师, 目前负责百度云的MongoDB/Redis等NoSQL系统的开发和运维, 在高性能网络服务和分布式存储系统方面有丰富经验. 
+  intro_en: ...
+-
+  name: 王为
+  city_beijing: 1
+  city: 北京
+  city_en: Beijing
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-wangwei.png?imageView2/2/h/80
+  intro: 经历丰富的实习生,从大一到大二在北京工业大学防灾减灾所做工业监控软件开发,大三在中科院计算所做 OpenStack 开发,大四(现)在UnitedStack 做虚拟网络与 OpenStack 开发. 活跃于 Buildbot,OpenStack 社区. 
+    - 个人博客:http://mytrix.me/ 
+    - Github:https://github.com/MatheMatrix 
+    - Launchpad主页:https://launchpad.net/~damon-devops
+  intro_en: ...
+-
+  name: 康雷
+  city_beijing: 1
+  city: 北京
+  city_en: Beijing
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-kanglei.png?imageView2/2/h/80
+  intro: 中国科学技术大学自动化专业硕士研究生,研究方向未来网络和多媒体计算,热爱python,用tornado框架做过一个分类兴趣网站,喜欢用python写脚本代替重复性劳动. 专注于python和开源硬件结合的领域. 
+  intro_en: ...
+-
+  name: 刘晓明
+  city_beijing: 1
+  city: 北京
+  city_en: Beijing
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-xiaoming.jpg?imageView2/2/h/80
+  intro: DeepGlint全栈工程师,guokr.com技术总监,tudou.com助理架构师
+  intro_en: ...
+-
+  name: binux
+  city_beijing: 1
+  city: 北京
+  city_en: Beijing
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/binux.5449.png?imageView2/2/h/80
+  intro: for fun.
+  intro_en: ...
+-
   name: 李宽
   city_beijing: 1
   city: 北京
@@ -29,7 +81,7 @@
   city_beijing: 1
   city: 北京
   city_en: Beijing
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 北京信易云媒Python工程师
   intro_en: Python engineer at Beijing Msgcopy
 -
@@ -37,7 +89,7 @@
   city_beijing: 1
   city: 北京
   city_en: Beijing
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 知道创宇程序员,客串项目经理. 擅长 Web 开发,从事的工作是 Web 安全相关产品的研发和管理. 信奉,现阶段成功的软件开发如果有所谓"银弹"的话,那只能是靠谱的团队(或者是说所谓的人件,湿件吧).
   intro_en: Programmer and program manager of Knowsec, working on the R&D and management of the web security products
 -
@@ -45,18 +97,53 @@
   city_beijing: 1
   city: 北京
   city_en: Beijing
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: Python 爱好者,目前就职于 scrapy 创始人的公司, Seafile 项目核心开发者
   intro_en: Python lover, working with the creator of scrapy.  Core developer of Seafile project.
 #########################################
 #   魔都
 #########################################
 -
+  name: 李飞林
+  name_en: felinx.lee
+  city_shanghai: 1
+  city: 上海
+  city_en: Shanghai
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-felinx_lee.jpg?imageView2/2/h/80
+  intro: 上海掌和信息科技有限公司CEO,飞龙博客博主( http://feilong.me ),国内最早的Tornado脑残粉. 
+  intro_en: ...
+-
+  name: 黄冬
+  name_en: HD
+  city_shanghai: 1
+  city: 上海
+  city_en: Shanghai
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-huangdong.jpg?imageView2/2/h/80
+  intro: FreeBSD,Python社区发起人/魔豆路由器创始人/新浪,优酷土豆等多个核心系统平台和产品技术负责人
+  intro_en: ...
+-
+  name: 王震
+  city_shanghai: 1
+  city: 上海
+  city_en: Shanghai
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-wangzhen.jpg?imageView2/2/h/80
+  intro: python 爱好者 对各种新技术都有兴趣.  目前在上海marin software工作
+  intro_en: ...
+-
+  name: ??
+  name_en: ???
+  city_shanghai: 1
+  city: 上海
+  city_en: Shanghai
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro: ??
+  intro_en: ...
+-
   name: 罗志城
   city_shanghai: 1
   city: 上海
   city_en: Shanghai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 北京正点时空科技有限公司研发经理
   intro_en: R&D manager, Beijing Zhengdian Shikong Technology Limited Company
 -
@@ -81,7 +168,7 @@
   city_shanghai: 1
   city: 上海
   city_en: Shanghai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 2014年开始全职创业.
   intro_en: Begin his full-time startup since 2014
 -
@@ -140,7 +227,7 @@
   city_zhuhai: 1
   city: 珠海
   city_en: Zhuhai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 在腾讯游戏运营部,使用python做运营开发. 曾经用python搞过电子商城,营销平台,手机代理程序等各类型应用
   intro_en: Operation developer at Tencent Game, having used python to build e-mall, markerting platform, mobile proxy app, etc
 -
@@ -156,7 +243,7 @@
   city_zhuhai: 1
   city: 珠海
   city_en: Zhuhai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: MEIZU 工程师
   intro_en: Engineer at MEIZU
 -
@@ -188,7 +275,7 @@
   city_zhuhai: 1
   city: 珠海
   city_en: Zhuhai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 猎豹移动,工程师
   intro_en: Engineer of Cheetah Mobile
 -
@@ -211,29 +298,37 @@
   city: 杭州
   city_en: Hangzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/HepoChen.jpg?imageView2/2/h/80
-  intro: FarBox的创始人，流浪在代码一线的产品经理
-  intro_en: 
--
-  name: 施远敏
-  city_hangzhou: 1
-  city: 杭州
-  city_en: Hangzhou
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
-  intro: 诺基亚通信的资深技术专家，软件研发教练
+  intro: FarBox的创始人,流浪在代码一线的产品经理
   intro_en: 
 -
   name: 令狐虫
   city_hangzhou: 1
   city: 杭州
   city_en: Hangzhou
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
-  intro: SFIT资深软件工程师，BT群核心成员， g4pcc发起人
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro: SFIT资深软件工程师,BT群核心成员, g4pcc发起人
   intro_en: 
 -
   name: 李枫
   city_hangzhou: 1
   city: 杭州
   city_en: Hangzhou
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
-  intro: 在手机相关研发领域已有近11年工作经验，先后在摩托罗拉，三星等IT企业工作，现就职于阿里巴巴。
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/hz-lifeng.jpg?imageView2/2/h/80
+  intro: 在手机相关研发领域已有近11年工作经验,先后在摩托罗拉,三星等IT企业工作,现就职于阿里巴巴. 
+  intro_en: 
+-
+  name: Hepo Chen
+  city_hangzhou: 1
+  city: 杭州
+  city_en: Hangzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro: FarBox的创始人,流浪在代码一线的产品经理. 
+  intro_en: 
+-
+  name: ???
+  city_hangzhou: 1
+  city: 杭州
+  city_en: Hangzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  intro: ???
   intro_en: 
