--- a/src/data/_schedule_zhuhai.yaml
+++ b/src/data/_schedule_zhuhai.yaml
@@ -2,7 +2,7 @@ address: 珠海吉大 景山路 莲山巷8号 金山软件大厦
 address_en: Jinshan Software Building, No.8 Lianshan Road, Jingshan road, Xiangzhou, Zhuhai
 venue: 一层会议厅
 venue_en: Floor 1 Meet Hall
-traffic: 珠海中天酒店对面,工商银行隔壁；4路,9路,K10路,13路,22路,23路,26路,99路 到水湾北下,即见!坐船,到九洲港下; 城铁到终点 拱北站下; TEXI 13元即达!
+traffic: 珠海中天酒店对面,工商银行隔壁;4路,9路,K10路,13路,22路,23路,26路,99路 到水湾北下,即见!坐船,到九洲港下; 城铁到终点 拱北站下; TEXI 13元即达!
 traffic_en: Line 4, 9, K10, 13, 22, 23, 26, 99 at North Shuiwan Station; By ship, Jiu Zhou Port; Subway, Gong Bei Station; Taxi, RMB 13
 notices: Lightning Talking ~ 闪电演讲使用极限模式/ 中午报名,每节10分钟,不用幻灯,到点下台!
 date: 2014-11-15 09:00~18:05
@@ -112,7 +112,7 @@ pm:
     topic: Python Practices for Android/Linux Development?
     speaker: 吴章金
     speaker_en: 吴章金 (Wu Zhangjin)
-    preview: 系统优化:数据渲染,形象化思维；oscilloscope~ 功耗,性能,温控等数据通过Python示波器的方式展示出来?自动化测试框架:提早发现问题,快速重现问题；基本框架以及核心实现为Python~；程控开关,Python + Shell 版关键片段；程控制电源,GPIB Python封装；串口控制,Python serial模块；内核可视化调试,"个性化Bug"；基于Python serial写了串口终端,在接收到自己指定的字符后做加色处理~；
+    preview: 系统优化:数据渲染,形象化思维;oscilloscope~ 功耗,性能,温控等数据通过Python示波器的方式展示出来?自动化测试框架:提早发现问题,快速重现问题;基本框架以及核心实现为Python~;程控开关,Python + Shell 版关键片段;程控制电源,GPIB Python封装;串口控制,Python serial模块;内核可视化调试,"个性化Bug";基于Python serial写了串口终端,在接收到自己指定的字符后做加色处理~;
     preview_en: System optimization - data rendering, imagical thinking; oscilloscope, power consumption, performance, temparature control and data visualization by python. Automatic test framework - find problems in advance, fast reproduce problems; Python + shell code snippets; program controlled switch and power and serial port, GPIB by python, python serial module; visualized kernel debugging; individual bug; color message received from serial port.
   - time: "~ 17:15"
     topic: Luna 之高效 KV 库
