--- a/src/data/_volunteers.yaml
+++ b/src/data/_volunteers.yaml
@@ -21,7 +21,7 @@
   role: organizer
   role_organizer: 1
   avatar: http://pyconcn.qiniudn.com/images/volunteer/lxneng.jpg
-  intro: "从2008年开始使用Python并喜欢上Python, 活跃于沪上各类线下技术社区, 同时参与组织TopGeek和PMCamp社区, 目前就职于上海菜根科技有限公司。"
+  intro: "从2008年开始使用Python并喜欢上Python, 活跃于沪上各类线下技术社区, 同时参与组织TopGeek和PMCamp社区, 目前就职于上海菜根科技有限公司. "
   blog: http://lxneng.com
   weibo: http://weibo.com/lxneng
 -
@@ -37,7 +37,7 @@
   role: technician
   avatar: http://pyconcn.qiniudn.com/coyote/images/myphoto.png?imageView2/2/h/80
   role_technician: 1
-  intro: 北京天融信 程序员; Python爱好者，网络安全初学者;崇尚菜鸟先飞,为pycon贡献微薄之力;
+  intro: 北京天融信 程序员; Python爱好者,网络安全初学者;崇尚菜鸟先飞,为pycon贡献微薄之力;
   weibo: http://weibo.com/coytoe
   github: https://github.com/chencoyote
 -
@@ -45,7 +45,7 @@
   role: technician
   avatar: http://avatar-ludwig.qiniudn.com/p.png
   role_technician: 1
-  intro: 院研究生二年级；热爱Python，任何事情都想先用Python解决；热爱并善于与人交流，喜爱和人合作；喜欢了解各种技术，梦想计算机改善大家的生活。
+  intro: 院研究生二年级;热爱Python,任何事情都想先用Python解决;热爱并善于与人交流,喜爱和人合作;喜欢了解各种技术,梦想计算机改善大家的生活. 
   intro_en: Graduate Student, keen on Python, try to solve everything via Python; Feeling like and good at communication, happy to collaborate with others. Wish computer make life better.
   weibo: http://weibo.com/coderzhao
   github: https://github.com/zijing07
@@ -54,6 +54,6 @@
   role: technician
   avatar: http://ww3.sinaimg.cn/mw690/e382d508jw1el53ymgjgbg204j04j772.gif
   role_technician: 1
-  intro: 研二学生，关注分布式计算相关领域，Python爱好者
+  intro: 研二学生,关注分布式计算相关领域,Python爱好者
   intro_en: A graduate student, interested in distributed computing and related, Python lover.
   github: https://github.com/7c00
