--- a/src/data/_proposals.yaml
+++ b/src/data/_proposals.yaml
@@ -16,7 +16,6 @@
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: QPython项目创始人,曾任职于Zynga,新浪网等互联网公司
-  intro_en: ...
 -
   name: 杨林
   city_beijing: 1
@@ -24,7 +23,6 @@
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
   intro: 杨林, 百度云系统工程师, 目前负责百度云的MongoDB/Redis等NoSQL系统的开发和运维, 在高性能网络服务和分布式存储系统方面有丰富经验. 
-  intro_en: ...
 -
   name: 王为
   city_beijing: 1
@@ -35,7 +33,6 @@
     - 个人博客:http://mytrix.me/ 
     - Github:https://github.com/MatheMatrix 
     - Launchpad主页:https://launchpad.net/~damon-devops
-  intro_en: ...
 -
   name: 康雷
   city_beijing: 1
@@ -43,7 +40,6 @@
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-kanglei.png?imageView2/2/h/80
   intro: 中国科学技术大学自动化专业硕士研究生,研究方向未来网络和多媒体计算,热爱python,用tornado框架做过一个分类兴趣网站,喜欢用python写脚本代替重复性劳动. 专注于python和开源硬件结合的领域. 
-  intro_en: ...
 -
   name: 刘晓明
   city_beijing: 1
@@ -51,7 +47,6 @@
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/bj-xiaoming.jpg?imageView2/2/h/80
   intro: DeepGlint全栈工程师,guokr.com技术总监,tudou.com助理架构师
-  intro_en: ...
 -
   name: binux
   city_beijing: 1
@@ -59,7 +54,6 @@
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/binux.5449.png?imageView2/2/h/80
   intro: for fun.
-  intro_en: ...
 -
   name: 李宽
   city_beijing: 1
@@ -111,7 +105,6 @@
   city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-felinx_lee.jpg?imageView2/2/h/80
   intro: 上海掌和信息科技有限公司CEO,飞龙博客博主( http://feilong.me ),国内最早的Tornado脑残粉. 
-  intro_en: ...
 -
   name: 黄冬
   name_en: HD
@@ -120,7 +113,6 @@
   city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-huangdong.jpg?imageView2/2/h/80
   intro: FreeBSD,Python社区发起人/魔豆路由器创始人/新浪,优酷土豆等多个核心系统平台和产品技术负责人
-  intro_en: ...
 -
   name: 王震
   city_shanghai: 1
@@ -128,16 +120,6 @@
   city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/sh-wangzhen.jpg?imageView2/2/h/80
   intro: python 爱好者 对各种新技术都有兴趣.  目前在上海marin software工作
-  intro_en: ...
--
-  name: ??
-  name_en: ???
-  city_shanghai: 1
-  city: 上海
-  city_en: Shanghai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
-  intro: ??
-  intro_en: ...
 -
   name: 罗志城
   city_shanghai: 1
@@ -298,37 +280,21 @@
   city: 杭州
   city_en: Hangzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/HepoChen.jpg?imageView2/2/h/80
-  intro: FarBox的创始人,流浪在代码一线的产品经理
-  intro_en: 
+  intro: "FarBox的创始人,流浪在代码一线的产品经理."
+  intro_en: Co-founder and PM of Farbox.
 -
   name: 令狐虫
   city_hangzhou: 1
   city: 杭州
   city_en: Hangzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
-  intro: SFIT资深软件工程师,BT群核心成员, g4pcc发起人
-  intro_en: 
+  intro: "SFIT资深软件工程师,BT群核心成员, g4pcc发起人"
+  intro_en: "Senior software engineer of SFIT, core-member of BT group, founder-member of g4pcc"
 -
   name: 李枫
   city_hangzhou: 1
   city: 杭州
   city_en: Hangzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/hz-lifeng.jpg?imageView2/2/h/80
-  intro: 在手机相关研发领域已有近11年工作经验,先后在摩托罗拉,三星等IT企业工作,现就职于阿里巴巴. 
-  intro_en: 
--
-  name: Hepo Chen
-  city_hangzhou: 1
-  city: 杭州
-  city_en: Hangzhou
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
-  intro: FarBox的创始人,流浪在代码一线的产品经理. 
-  intro_en: 
--
-  name: ???
-  city_hangzhou: 1
-  city: 杭州
-  city_en: Hangzhou
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
-  intro: ???
-  intro_en: 
+  intro: "在手机相关研发领域已有近11年工作经验,先后在摩托罗拉,三星等IT企业工作,现就职于阿里巴巴."
+  intro_en: "Experienced in mobile development and related, worked for Moto, Samsung and other IT companies, now working at Alibaba"
