--- a/src/data/_schedule_hangzhou.yaml
+++ b/src/data/_schedule_hangzhou.yaml
@@ -20,7 +20,7 @@ pm:
     speaker_en: TBD
     preview: 
     preview_en:
-  - time: "~ 14:00"
+  - time: "13:30 - 14:00"
     topic: idiomatic python
     speaker: 施远敏
     speaker_en: 施远敏
