--- a/src/data/_volunteers.yaml
+++ b/src/data/_volunteers.yaml
@@ -43,7 +43,7 @@
 -
   name: zijing07(赵紫晶)
   role: technician
-  avatar: http://avatar-ludwig.qiniudn.com/p.png
+  avatar: http://avatar-ludwig.qiniudn.com/p.png?imageView2/1/w/150/h/150/q/85
   role_technician: 1
   intro: 院研究生二年级;热爱Python,任何事情都想先用Python解决;热爱并善于与人交流,喜爱和人合作;喜欢了解各种技术,梦想计算机改善大家的生活. 
   intro_en: Graduate Student, keen on Python, try to solve everything via Python; Feeling like and good at communication, happy to collaborate with others. Wish computer make life better.
