--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -59,16 +59,22 @@
 -
   level_gold: 1
   level: gold
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/upyun-Logo-h200.png?imageView2/2/w/180
+  link: https://www.upyun.com/index.html
+  intro: "又拍云存储是杭州又拍云科技有限公司旗下项目,成立于2005年6月,前期主要为又拍网,又拍图片管家提供图片云存储／云计算服务,于2010年2月对所有用户开放使用."
+  intro_en: "upyun cloud storage is hangzhou youpai technology co., LTD's project, was founded in June 2005, the early main take yupoo.com, and v.yupoo.com , in February 2010 is open to all users to use."
+-
+  level_gold: 1
+  level: gold
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/turingbook-Logo.jpg?imageView2/2/w/180
   link: http://www.ituring.com.cn
   intro: "图灵公司始终以策划出版高质量的科技书籍为核心业务,推出了一系列高质量的畅销技术图书,是国内计算机图书著名的有影响力的出版单位之一,成立九年以来,图书累积销售500多万册,影响了上百万的读者. 图灵社区以为读者提供一流的内容为己任,拥有众多资深技术爱好者用户,是国内著名的专业的IT技术交流+阅读社区之一. 图灵社区经过不断升级改造和尝试实践,已迅速成长为国内知名科技电子书销售平台."
 -
   level_gold: 1
   level: gold
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/upyun-Logo-h200.png?imageView2/2/w/180
-  link: https://www.upyun.com/index.html
-  intro: "又拍云存储是杭州又拍云科技有限公司旗下项目,成立于2005年6月,前期主要为又拍网,又拍图片管家提供图片云存储／云计算服务,于2010年2月对所有用户开放使用."
-  intro_en: "upyun cloud storage is hangzhou youpai technology co., LTD's project, was founded in June 2005, the early main take yupoo.com, and v.yupoo.com , in February 2010 is open to all users to use."
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/books-hz-logo_nowords.png?imageView2/2/h/80
+  link: http://www.hzbook.com/About/About.html
+  intro: " 北京华章图文信息有限公司是机械工业出版社与(美国)万国图文信息有限公司共同投资建立的合资企业,主要从事科技,经管,外语领域的图书出版服务业务,公司成立于1995年10月. '国际视野,教育为本,专业出版'是我们发展的重要指导思想,全球采集内容,服务中国教育,成为华章的鲜明特色. 公司出版的图书代表着计算机,经济管理,文化和英语教学领域的最新视野,能最好地满足专业人士,教师和学生不断变化的需求. '与您携手,共奏华章',华章人以澎湃的激情,崭新的视角,伴您走向成功!"
 #########################################
 #   白银级
 #########################################
@@ -89,13 +95,6 @@
   link: http://www.modouwifi.com/
   intro: "魔豆路由器是果壳电子于2014年6月5日发布的一款智能无线路由器. 其配备了一块2.4英寸触控屏,用户可以通过这块屏幕,实现监控上网流量和设备状况,修改WiFi密码等功能."
   intro_en: "Modou wifi is GEAK released on June 5, 2014, a smart wireless router. It is equipped with a 2.4 -inch touch screen, the user can through the screen, to realize to monitor Internet traffic and equipment status, modify the WiFi password and etc.."
--
-  level_bronze: 1
-  level: bronze
-  logo: http://pyconcn.qiniudn.com/images/sponsors/yidu.gif?imageView2/2/h/80
-  link: http://everydo.com/common/about.rst
-  intro: "广州润普网络科技有限公司( http://zopen.cn )自2002年成立以来,立足于开放源代码软件的专业技术开发与服务. 为客户提供基于Zopen/Plone等开放源代码软件的企业内容管理,项目管理,文档管理,知识管理和产品解决方案,提供信息系统咨询,开发,支持等服务,以及Zopen/Plone的培训服务."
-  intro_en: "ZOpen.cn, are a Zope and Plone based opensource Content Management solution provider located in Shanghai, China. Our company came into existance at Ferbrary, 2003. We are a technology-based company."
 -
   level_bronze: 1
   level: bronze
