update qisense logo

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -105,7 +105,7 @@
 -
   level_bronze: 1
   level: bronze
-  logo: http://www.qisense.com/elements/logo-black.png
+  logo: http://lxneng.qiniudn.com/qisense-logo.png?imageView2/2/w/200
   link: http://www.qisense.com/
   intro: "七感科技 (Qisense) 将复杂的数据简单化,旨在从海量数据中智能提炼重要信息. 我们利用高级数学理论和统计模型进行分析计算,通过数据可视化向用户推送及时的,有价值的,并且可执行的商业情报."
   intro_en: "Qisense can simplifying complex data , Aimed at intelligent extract important information from the huge amounts of data. We use advanced mathematical theory and statistical models for analysis and calculation, To the user through data visualization push timely and valuable, executable business intelligence."
