增补首页门票信息,以及珠海议程调节

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -31,17 +31,18 @@ home_intro: >
   第四届 PyConChina 大会. 本次大会由CPyUG,GDG,TopGeek在
   上海,北京,珠海,杭州,苏州同时举办.<ul>
   <li><strong><a href="/proposals.html">主题/工作坊提交入口</a></strong></li>
-  <li>门票级别: <ul>
-  <li>0RMB    学生票,嘦带学生证来即可免费入场</li>
-  <li>100RMB  普通票,包含所有礼品和午餐 <b>注意: 11月1日之前</b>购买为<b>50RMB</b></li>
-  <li>200RMB  企业票,包含发票</li>
+  <li>门票策略: <ul>
+  <li>0RMB    学生票, 含所有礼品/茶点/午餐 <sup>为支持学生,嘦有效学生证即可入场,但也要预订门票以便统计人数吼;-)</sup></li>
+  <li>100RMB  普通票, 无发票, 待遇同学生票 <b>注意: 11月1日之前</b>购买为<b>50RMB</b></li>
+  <li>200RMB  企业票, 有发票, 待遇普通票</li>
+  <li>另: 蠎人赞助行者和企业票持有者,有前排特座 ;-)</li>
   </ul></li>
   <li>报名入口:<i>(苏/杭 只有半天,全部免费)</i><ul>
-  <li><a href="http://19wu.com/PyConShanghai"><b>上海</b>报名链接</a></li>
-  <li><a href="http://19wu.com/PyConBeijing"><b>北京</b>报名链接</a></li>
-  <li><a href="http://19wu.com/PyConZhuhai"><b>珠海</b>报名链接</a></li>
+  <li><a href="http://19wu.com/PyConShanghai"><b>上海</b>门票入口</a></li>
+  <li><a href="http://19wu.com/PyConBeijing"><b>北京</b>门票入口</a></li>
+  <li><a href="http://19wu.com/PyConZhuhai"><b>珠海</b>门票入口</a></li>
 
-  <li><a href="http://19wu.com/PyConSuzhou">苏州报名入口</a></li>
+  <li><a href="http://19wu.com/PyConSuzhou">苏州门票入口</a></li>
   <li><a href="https://gdgdocs.org/forms/d/1XW1pAjDncb_ww8PL9nhbfIP88MmWPTU7RUuGoNnvwwQ/viewform">杭州报名入口</a></li>
 
   </ul></li>
