增补 HD 演讲简介

--- a/src/data/_proposals.yaml
+++ b/src/data/_proposals.yaml
@@ -200,8 +200,8 @@
   city: 上海
   city_en: Shanghai
   avatar:
-  intro: "堆糖网技术合伙人。曾担任阿里巴巴平台架构师，盛大研究员。"
-  intro_en: 堆糖网技术合伙人。曾担任阿里巴巴平台架构师，盛大研究员。
+  intro: "堆糖网技术合伙人. 曾担任阿里巴巴平台架构师,盛大研究员. "
+  intro_en: 堆糖网技术合伙人. 曾担任阿里巴巴平台架构师,盛大研究员. 
 
 #########################################
 #   珠三角
