增补苏州讲师

--- a/src/data/_proposals.yaml
+++ b/src/data/_proposals.yaml
@@ -325,7 +325,7 @@
 #########################################
 -
   name: 巨震
-  city_zhuhai: 1
+  city_suzhou: 1
   city: 苏州
   city_en: Suzhou
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
