增补赞助商E文翻译

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -115,3 +115,4 @@
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/ptpress_logo-blue.png?imageView2/2/w/160
   link: http://www.ptpress.com.cn
   intro: "人民邮电出版社是工业和信息化部主管的大型专业出版社,成立于1953年10月1日. 2003年被中央确定为文化体制改革第一批试点单位. 60多年来,人民邮电出版社坚持 立足信息产业,面向现代社会,传播科学知识,服务科教兴国,为走中国特色新型工业化道路服务的出版宗旨,锐意改革探索,不断发展壮大,已成为集图书,期刊,音像电子出版物和网络出版于一体的,在国内外具有专业特色和品牌影响的综合性科技出版大社."
+  intro_en: "The People's Posts and Telecommunications Press（Posts & Telecom Press）was by Ministry of Industry and Information Technology of the People's Republic of China management, Founded in October 1, 1953."
